--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,24 @@
       <version>9.1-901.jdbc4</version>
     </dependency>
 
+    <dependency>
+      <groupId>org.jooq</groupId>
+      <artifactId>jooq</artifactId>
+      <version>3.4.4</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.jooq</groupId>
+      <artifactId>jooq-meta</artifactId>
+      <version>3.4.4</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.jooq</groupId>
+      <artifactId>jooq-codegen</artifactId>
+      <version>3.4.4</version>
+    </dependency>
+
   </dependencies>
 
   <distributionManagement>
